# zoda

./: Cargo.toml  README.md
src/: error.rs  grid.rs  main.rs
src/commitments/: merkle_commitment.rs  mod.rs
src/encoding/: langrange.rs  mod.rs  read_solomon.rs  reed_solomon.rs
src/encoding/tensor_variant/: mod.rs
src/variants/: mod.rs  reed_solomon.rs
src/variants/tensor_variant/: mod.rs
src/variants/tensor_variant_fft/: mod.rs
