[package]
name = "accidental-computer"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = { version = "0.16.1", default-features = false }
ark-ff = { version = "^0.5.0", default-features = false }
ark-poly = { version = "^0.5.0", default-features = false }
ark-ec = { version = "^0.5.0", default-features = false }
ark-std = { version = "^0.5.0", default-features = false }
ark-crypto-primitives = { version = "^0.5.0", default-features = true, features = [ "r1cs" , "crh", "merkle_tree"] }
ark-bls12-381 = { version = "^0.5.0", default-features = false, features = ["curve"] }
ark-ed-on-bls12-381 = { version = "^0.5.0", features = ["r1cs"] }
ark-serialize = {version = "^0.5.0", default-features = false}
spongefish = { git = "https://github.com/arkworks-rs/spongefish" }
reed-solomon-simd = {version = "3.0.1", default-features = false}
rand = { version = "0.8.5" }
